<resources>
    <string name="app_name">Project3</string>
    <string name="HINT_UserName">Create user name</string>
    <string name="HINT_EnterUserName">Enter user name</string>
    <string name="HINT_Password">Enter password</string>

    <string name="Login">Login</string>
    <string name="CreateAccount">Register</string>
    <string name="HINT_CreatePassword">Create your password</string>
    <string name="HINT_FullName">Enter your full name</string>
    <string name="HINT_Hometown">Enter your hometown</string>
    <string name="HINT_Bio">Enter a short biography</string>
    <string name="TakePic">Take a photo \n for your profile</string>
    <string name="TakePicPost">Take a photo \n for your post</string>

    <string name="Dialog_Titile">Prompt</string>
    <string name="Traditional">Traditional Food</string>
    <string name="OK">Got it</string>

    <string name="XingHaiSquare">Xinghai Square was built at the centennial of the City of Dalian in 1998.The sculptures of 1000 footprints and an opened book facing the sea commemorates the vicissitudes of the city history. Across the Xinghai Bay, the Xinghai Bay Bridge could be seen. Around the square are high end apartments, restaurants, banks, luxury sports car dealers and an amusement park.The Xinghai Bay beach, the Castle Hotel, Dalian Morden History Museum and Dalian Shell Museum are also nearby. Located on the opposite side of the sculpture complex is the Xinghai CBD, which houses among other things Dalian Xinghai Convention and Exhibitions Center, Dalian World Expo Center and the headquarters of Dalian Commodity Exchange.
        \n\nReference: https://en.wikipedia.org/wiki/Xinghai_Square
    </string>

    <string name="XiamenUiviversity">Xiamen University main campus is located in Siming District in southwestern Xiamen. It is situated at the foothills of mountains, facing the ocean and surrounded by Xiamen bay.
        \n\nThe main campus is picturesque with beautiful scenery and parks and is one of the main tourist attractions in Xiamen, itself a popular tourist destination.Xiamen University has a built area of 2.6 million square meters and its libraries hold 3.5 million volumes.According to University Undergraduates Teaching Assessment and Chinese Universities Evaluation Standings, the university is ranked 11th in China and has maintained a top-20 ranking in China, among which 6 subjects reach A++ level, including economics and management, fine art, law, chemistry, journalism, communication and mathematics.
        \n\nReference: https://en.wikipedia.org/wiki/Xiamen_University
    </string>

    <string name="ZongZi">Zong Zi</string>
    <string name="ZongZi_Info">Zongzi, also known as Zong or sticky rice dumplings to westerners, is a traditional  Chinese Dragon Boat Festival food. It is mainly made of glutinous rice with other fillings, wrapped in bamboo or reed leaves and cooked by a few hours steaming or boiling. One of the most famous flavor is the Fujian Style zong. Among them, Braised pork Zong are the most popular ones in Xiamen, city of Fujian. It usually uses braised pork, mushroom and shrimps and lotus seeds as extra fillings.
    \n\nReference: https://en.wikipedia.org/wiki/Zongzi
    </string>

    <string name="GuoBaoRou">Guo Bao Rou</string>
    <string name="guobaoMeat_Info">Guo Bao Rou is a type of sweet and sour pork, but what makes this dish distinct among all sweet and sour porks is the care taken into thinly slicing the pork. This thin slicing, along with the breading, frying, and perfectly balanced sauce, makes for one of the best dishes in the Northeastern part of China. It belongs to the taste style of Dongbei, a style of Chinese cuisine that originates in the Northeastern part of the country.
    \n\nReference: https://myadventurousappetite.wordpress.com/2014/07/14/dongbei-every-day-guo-bao-rou-recipe/
    </string>

    <string name="BaoMoYuan_info">Bao Mo Garden, built at the end of the Qing Dynasty, covering an area of 5 mu, was damaged in the 1950s. It was rebuilt in 1995. It took five years to finish renovating Bao Mo Garden. Now it is enlarged a lot and covers an area of about 100 mu. It is a park of garden arts with the integration of the cultures of Qing period, architectural characteristics of ancient Canton, landscape art of Linnan, and Zhujiang style.
        \n\nStreams surround the scenic spots inside Bao Mo Garden. The trees there are verdant. The architecture, gardens, the hills and the waters, and the stone bridges are properly and harmoniously laid out so that the whole layout presents the traditional Chinese humanistic belief of the "harmonious union of God and man". The pavilions and towers and other buildings are located at certain places so that the whole layout is visible to travelers. The delicate engraved pillars are extremely pleasant to the eye. Travelers can also find the rich ornaments of pottery sculptures, china sculptures, brick inscriptions, ash sculptures, stone inscriptions, and wooden sculptures. Among these ornaments, there are some valuable articles showing great craftsmanship, for example, the Tu Yan He Ming Bi is confirmed as the biggest brick inscription by the headquarter of world Guinness in Shanghai. The exquisite craftsmanship of this brick inscription represents the utmost achievement of Chinese traditional brick inscription art. And the huge wall painting of china sculpture, Qing Ming Shang He Tu, is really glorious and brilliant, reminding people of the magnificent scene of the Golden Age in ancient China.
        \n\nThere is splendid water scenery inside the verdant Panyu Bao Mo Garden. Li Jing Bay, Qing Ping Lake, and Bao Mo Lake respectively run through a one-thousand-meter river. The water here is as clear as a mirror, running in a trickle. There are more than 30 stone bridges crossing these charming rivers and lakes. You can find yourself on a cockayne as the Penglai Fairy Island when you take a gaily-decorated pleasure boat on the lake. The surface of the water is rippling and the trees surrounding the lake are swaying in the breeze. Millions of carps swimming and chasing each other in water and it seems like red waves were rippling. What’s more, there is a paradise for children at Zi Zhu Stream of Zi Zhu Garden. Children can have great pleasure dabbling their hands in the stream and watching carps there.
        \n\nReference: https://www.chinatravel.com/guangzhou-attraction/panyu-bao-mo-garden/
    </string>

    <string name="zaocha">Zao Cha\n(Morning Tea)</string>
    <string name="zaocha_info">When referring the traditional Canton culture, morning tea culture could not be missed. During each weekends or holidays, Cantonese will begin their morning tea activity. Generally, the morning tea will be joined by a whole family or a group of good friends. In Cantonese idea, morning tea is an enjoyable thing which can spend leisure time and relax selves thoroughly.
    \n\nThe origin of Canton morning tea can be dated back to Xianfeng Emperor Period. During that time, there was a restaurant called “Yi Li Guan”. In the gate of this restaurant there was a board written two Chinese characters “Cha Hua” which mean a place for chatting and serve tea and snacks. Gradually, Cantonese preferred this kind of dinning. And with the trend, more and more restaurants in this kind were emerged. Till now, the tea served in the morning tea becomes the second role, while the snacks play a very important role. The elaborate snacks are symbols of the canton dinning culture.
    \n\nReference: https://www.topchinatravel.com/china-food-restaurant/canton-morning-ta.htm
    </string>

</resources>
