<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    >

    <EditText
        android:layout_marginTop="180dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/HINT_EnterUserName"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:id="@+id/Text_EnterUserName"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Text_EnterUserName"
        android:layout_centerHorizontal="true"
        android:hint="@string/HINT_Password"
        android:inputType="textPassword"
        android:gravity="center_horizontal"
        android:id="@+id/Text_EnterPassword"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccount"
        android:textAllCaps="false"
        android:id="@+id/Button_Create"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="17dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAllCaps="false"
        android:text="@string/Login"
        android:id="@+id/Button_Login"
        android:background="@android:color/transparent"
        android:layout_alignBottom="@+id/Button_Create"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="38dp" />
</RelativeLayout>
