<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/TakePic"
        android:layout_centerHorizontal="true"
        android:id="@+id/profile_Image"
        />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TakePic"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:id="@+id/Button_TakePhoto"
        android:layout_below="@id/profile_Image"
        />

    <EditText
        android:layout_below="@id/Button_TakePhoto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/HINT_FullName"
        android:id="@+id/Text_EnterName"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Text_EnterName"
        android:hint="@string/HINT_Hometown"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/Text_EnterHometown"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Text_EnterHometown"
        android:gravity="center_horizontal"
        android:hint="@string/HINT_Bio"
        android:id="@+id/Text_EnterBio"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Text_EnterHometown"
        android:layout_marginTop="50dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="OK"
            android:id="@+id/Button_ProfileOK" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/Button_ProfileCancel"
            android:textAllCaps="false"
            />

    </LinearLayout>
</RelativeLayout>